umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@covalent_sh3+.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: covalent
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "{S+/1v3}"
      - "{Hv1}"
      - "{Hv1}"
      - "{Hv1}"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "{S+/1v3}"
      - "{Hv1}"
      - "{Hv1}"
      - "{Hv1}"
    bonds:
      - "-"
      - "-"
      - "-"
