umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@covalent_teh.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: covalent
atom_typing:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{Te/2^1v1}"
      - "{Hv1}"
    bonds:
      - "-"
counts:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{Te/2^1v1}"
      - "{Hv1}"
    bonds:
      - "-"
